--- a/1.html
+++ b/1.html
@@ -3,15 +3,17 @@
 <head>
 <title>WEB1- html</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JAvaScrupt</a></li>
 </ol>
+    <div id="article">
 <h2>HTML이란 무엇인가?</h2>
 <a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
 <p>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
@@ -20,5 +22,7 @@
 <p>
     <a href="https://naver.com">NAVER</a>
   </p>
+</div>
+</div>
 </<body>
 </html>
